# InterlockTestStand

./: LICENSE  README.md  README_setup.md  environment.yml  run_gui.sh  setup.sh
TestStandGUI/: README.md  environment.yml  initialization.py
TestStandGUI/app/: app___init___.py  applicationState.py
TestStandGUI/assets/: desktop.ini
TestStandGUI/ui/: executionWindow.py  landing.py  parameterInput.py  parameterInputOGWORKING.py
TestStandGUI/utils/: navigation.py  saveTests.py  storedDataPaths.py  telemetrySimulator.py
docs/: runTestServer_v1_notes.md
runTestServer/: CMakeLists.txt  README.md
runTestServer/include/runTestServer/Logging/: Logger.h
runTestServer/include/runTestServer/Motion/: IMotionModule.h  MotionTypes.h  TeknicAxis.h  TeknicSystem.h
runTestServer/include/runTestServer/Safety/: SafetyModule.h
runTestServer/include/runTestServer/State/: MachineState.h  StateMachine.h
runTestServer/src/: main.cpp
runTestServer/src/Logging/: Logger.cpp
runTestServer/src/Motion/: TeknicAxis.cpp  TeknicSystem.cpp
runTestServer/src/Safety/: SafetyModule.cpp
runTestServer/src/State/: StateMachine.cpp
shared/schemas/: motion_test.example.json
